--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ layout: default
 
 <p>
 	{% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
-<!-- site_tags: {{ site_tags }} -->
+<!-- site_tags: using sort_natural see https://github.com/jekyll/jekyll/issues/6290 -->
 {% assign tag_words = site_tags | split:',' | sort %}
-<!-- tag_words: {{ tag_words }} -->
+<!-- tag_words: -->
 
     {% for tag in tag_words %}
     <!-- Here's a hack to generate a "tag cloud" where the size of
